--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -33,7 +33,8 @@
                         <li class="nav-item"><a class="nav-link" href="/howToHelp">How to Help</a></li>
                         <li class="nav-item"><a class="nav-link" href="/howToHelpIcons">Donate</a></li>
                         <li class="nav-item"><a class="nav-link" href="/eventRequest">Request Event</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/adminRedirect">Admin Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/internalLanding">Admin View</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/volunteerPage">Volunteer View</a></li>
                     </ul>
                 </div>
             </div>
