--- a/frontend/views/eventRecords.ejs
+++ b/frontend/views/eventRecords.ejs
@@ -18,44 +18,7 @@
 </head>
 <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: #303030;">
-        <div class="container-fluid p-0">
-            <a class="navbar-brand" href="/internalLanding"><img src="../assets/TSlogoLowRes.png" alt="..." />Turtle Shelter Project -- Admin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars ms-1"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="/internalLanding"><i class="fas fa-tools"></i> Admin Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/eventRecords"><i class="fas fa-calendar-alt"></i> Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/volunteerRecords"><i class="fas fa-users"></i> Volunteers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/adminRecords"><i class="fas fa-user-cog"></i> Admins</a></li>
-                    <li class="nav-item dropdown">
-                        <a 
-                            class="nav-link dropdown-toggle logout-btn" 
-                            href="#" 
-                            id="navbarDropdown" 
-                            role="button" 
-                            data-toggle="dropdown" 
-                            aria-haspopup="true" 
-                            aria-expanded="false"
-                        >
-                            <i class="fas fa-sign-out-alt"></i> Logout
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/logout">
-                                <i class="fas fa-sign-out-alt"></i> Logout
-                            </a>
-                            <a class="dropdown-item" href="/">
-                                <i class="fas fa-home"></i> Return Home
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <%- include('partials/header_admin') %>
 
     <main style="padding-top: 70px;"></main>
     <div class="container mt-5" style="max-width: 90%;">
@@ -141,6 +104,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
