--- a/frontend/views/volunteerRecords.ejs
+++ b/frontend/views/volunteerRecords.ejs
@@ -63,19 +63,17 @@
                             href="#" 
                             id="navbarDropdown" 
                             role="button" 
-                            data-toggle="dropdown" 
+                            data-bs-toggle="dropdown" 
                             aria-haspopup="true" 
                             aria-expanded="false"
                         >
-                            <i class="fas fa-sign-out-alt"></i> Logout
+                            <i class="fas fa-sign-out-alt"></i> Menu
                         </a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/logout">
-                                <i class="fas fa-sign-out-alt"></i> Logout
-                            </a>
-                            <a class="dropdown-item" href="/">
-                                <i class="fas fa-home"></i> Return Home
-                            </a>
+                            <a class="dropdown-item" href="/volunteerPage"><i class="fas fa-users"></i> Volunteer View</a>
+                            <a class="dropdown-item" href="/"><i class="fas fa-home"></i> Go Home</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
                         </div>
                     </li>
                 </ul>
@@ -192,7 +190,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
