Minor fixes to the shared headers

--- a/frontend/views/partials/header_admin.ejs
+++ b/frontend/views/partials/header_admin.ejs
@@ -13,7 +13,7 @@
 				<li class="nav-item"><a class="nav-link <%= (currentPath.startsWith('/adminRecords') ? 'active' : '') %>" href="/adminRecords"><i class="fas fa-user-cog"></i> Admins</a></li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle logout-btn" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fas fa-sign-out-alt"></i> Menu
+						<i class="fas fa-bars"></i> Menu
 					</a>
 					<div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="/volunteerPage"><i class="fas fa-users"></i> Volunteer View</a>
