--- a/frontend/views/adminRecords.ejs
+++ b/frontend/views/adminRecords.ejs
@@ -23,7 +23,7 @@
     <div class="container mt-5">
         <h2>Admin Records</h2>
         <div class="table-responsive" style="width: 100%;">
-            <table class="table table-striped table-bordered">
+            <table class="table table-striped table-bordered table-stacked">
                 <thead class="thead-dark">
                     <tr>
                         <th>First Name</th>
@@ -42,16 +42,16 @@
                     <% if (admin && admin.length > 0) { %>
                     <% admin.forEach(function(row) { %>
                         <tr>
-                            <td><%= row.firstname %></td>
-                            <td><%= row.lastname %></td>
-                            <td><%= row.phone %></td>
-                            <td><%= row.email %></td>
-                            <td><%= row.city %></td>
-                            <td><%= row.state %></td>
-                            <td><%= row.username %></td>
-                            <td><%= row.password %></td>
-                            <td><%= row.role %></td>
-                            <td>
+                            <td data-label="First Name"><%= row.firstname %></td>
+                            <td data-label="Last Name"><%= row.lastname %></td>
+                            <td data-label="Phone"><%= row.phone %></td>
+                            <td data-label="Email"><%= row.email %></td>
+                            <td data-label="City"><%= row.city %></td>
+                            <td data-label="State"><%= row.state %></td>
+                            <td data-label="Username"><%= row.username %></td>
+                            <td data-label="Password"><%= row.password %></td>
+                            <td data-label="Role"><%= row.role %></td>
+                            <td data-label="Actions">
                                 <div>
                                     <form action="/deleteAdmin/<%= row.volunteerid %>" method="POST" style="display:inline;">
                                         <button type="submit" onclick="return confirm('Are you sure you want to delete this record?');" class="btn btn-danger btn-sm">Delete</button>
