--- a/frontend/views/eventRecords.ejs
+++ b/frontend/views/eventRecords.ejs
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="table-responsive" style="width: 100%;">
-            <table class="table table-striped table-bordered" style="width: 100%;">
+            <table class="table table-striped table-bordered table-stacked" style="width: 100%;">
                 <thead class="thead-dark">
                     <tr>
                         <th>Event Status</th>
@@ -59,8 +59,8 @@
                     <% if (events.length > 0) { %>
                         <% events.forEach(event => { %>
                             <tr>
-                                <td><%= event.eventstatus.charAt(0).toUpperCase() + event.eventstatus.slice(1) %></td>
-                                <td>
+                                <td data-label="Event Status"><%= event.eventstatus.charAt(0).toUpperCase() + event.eventstatus.slice(1) %></td>
+                                <td data-label="Event Date">
                                     <%= event.eventdate 
                                         ? new Date(event.eventdate).toLocaleDateString('en-US') 
                                         : (event.startdaterange 
@@ -68,13 +68,13 @@
                                             : '') 
                                     %>
                                 </td>
-                                <td class="hide-on-completed"><%= event.city %></td>
-                                <td class="hide-on-completed"><%= event.state %></td>
-                                <td class="hide-on-completed"><%= event.zip %></td>
-                                <td><%= event.contactname %></td>
-                                <td class="hide-on-completed"><%= event.eventactivities %></td>
-                                <td><%= event.organization %></td>
-                                <td>
+                                <td class="hide-on-completed" data-label="City"><%= event.city %></td>
+                                <td class="hide-on-completed" data-label="State"><%= event.state %></td>
+                                <td class="hide-on-completed" data-label="Zip"><%= event.zip %></td>
+                                <td data-label="Contact Name"><%= event.contactname %></td>
+                                <td class="hide-on-completed" data-label="Activities"><%= event.eventactivities %></td>
+                                <td data-label="Organization"><%= event.organization %></td>
+                                <td data-label="Actions">
                                     <div>
                                         <form action="/deleteEventRec/<%= event.eventid %>" method="POST" style="display:inline;">
                                             <button type="submit" onclick="return confirm('Are you sure you want to delete this record?');" class="btn btn-danger btn-sm">Delete</button>
