--- a/frontend/views/volunteerRecords.ejs
+++ b/frontend/views/volunteerRecords.ejs
@@ -49,7 +49,7 @@
     <div class="container mt-5" style="width: 98vw;">
         <h2>Volunteer Records</h2>
         <div class="table-responsive" style="width: 100%;">
-            <table class="table table-striped table-bordered" style="width: 100%;">
+            <table class="table table-striped table-bordered table-stacked" style="width: 100%;">
                 <thead class="thead-dark">
                     <tr>
                         <th>First Name</th>
@@ -71,10 +71,10 @@
                     <% if (volunteer && volunteer.length > 0) { %>
                         <% volunteer.forEach(function(row) { %>
                             <tr>
-                                <td><%= row.firstname %></td>
-                                <td><%= row.lastname %></td>
-                                <td><%= row.phone %></td>
-                                <td>
+                                <td data-label="First Name"><%= row.firstname %></td>
+                                <td data-label="Last Name"><%= row.lastname %></td>
+                                <td data-label="Phone"><%= row.phone %></td>
+                                <td data-label="Email">
                                     <a href="#" 
                                        class="email-link" 
                                        data-toggle="modal" 
@@ -84,15 +84,15 @@
                                         <%= row.email %>
                                     </a>
                                 </td>
-                                <td><%= row.city %></td>
-                                <td><%= row.state %></td>
-                                <td><%= row.howtheyheard %></td>
-                                <td><%= row.sewinglevel %></td>
-                                <td><%= row.monthlyhrswilling %></td>
-                                <td><%= row.leadevent ? 'Yes' : 'No' %></td>
-                                <td><%= row.traveltime %></td>
-                                <td><%= row.comments || 'N/A' %></td>
-                                <td>
+                                <td data-label="City"><%= row.city %></td>
+                                <td data-label="State"><%= row.state %></td>
+                                <td data-label="How Heard"><%= row.howtheyheard %></td>
+                                <td data-label="Sewing Level"><%= row.sewinglevel %></td>
+                                <td data-label="Monthly Hrs"><%= row.monthlyhrswilling %></td>
+                                <td data-label="Lead Event?"><%= row.leadevent ? 'Yes' : 'No' %></td>
+                                <td data-label="Travel Time"><%= row.traveltime %></td>
+                                <td data-label="Comments"><%= row.comments || 'N/A' %></td>
+                                <td data-label="Actions">
                                     <div>
                                         <form action="/deleteVolunteer/<%= row.volunteerid %>" method="POST" style="display:inline;">
                                             <button type="submit" onclick="return confirm('Are you sure you want to delete this record?');" class="btn btn-danger btn-sm">Delete</button>
