--- a/frontend/views/adminForm.ejs
+++ b/frontend/views/adminForm.ejs
@@ -225,5 +225,6 @@
         </footer>
         <!-- Bootstrap core JS-->
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+       <script src="/backend/scripts.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
