--- a/frontend/views/adminRecords.ejs
+++ b/frontend/views/adminRecords.ejs
@@ -88,6 +88,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Chart.js for charts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/backend/scripts.js"></script>
     <script>
         $(document).ready(function(){
             $('.edit-btn').click(function(){
