--- a/frontend/views/eventRequest.ejs
+++ b/frontend/views/eventRequest.ejs
@@ -22,7 +22,7 @@
         <section>
             <div class="container">
                 <h2>Event Request Form</h2>
-                <form id="eventRequestForm" method="post" action="/EventRequest">
+                <form id="eventRequestForm" method="post" action="/EventRequest" data-allow-submit>
                     <div class="form-row">
                         <div class="row">
                             <div class="form-group col-md-3">
@@ -203,6 +203,7 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="/backend/scripts.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <!-- AI chatbot -->
