--- a/frontend/views/howToHelp.ejs
+++ b/frontend/views/howToHelp.ejs
@@ -67,6 +67,23 @@
             </div>
         </div>
     </section>
+    <!-- Demo notice modal -->
+    <div class="modal fade" id="demoNoticeModal" tabindex="-1" aria-labelledby="demoNoticeLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="demoNoticeLabel">Demo Notice</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            This is a demo environment. Submissions are disabled.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Okay</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Footer-->
     <footer class="footer py-4" style="background-color: #303030; position: absolute; bottom: 0; width: 100%; height: 30 px;">
         <div class="row align-items-center">
