--- a/frontend/views/internalLanding.ejs
+++ b/frontend/views/internalLanding.ejs
@@ -233,7 +233,7 @@
                         <% events.forEach(function(event, index) { %> <!-- Added index for unique modal IDs -->
                             <tr>
                                 <td data-label="Status"><%= event.eventstatus %></td>
-                                <td data-label="Date"><%= event.eventdate ? event.eventdate.toISOString().split('T')[0] : event.startdaterange.toISOString().split('T')[0] %></td>
+                                <td data-label="Date"><%= event.eventdate ? new Date(event.eventdate).toISOString().split('T')[0] : (event.startdaterange ? new Date(event.startdaterange).toISOString().split('T')[0] : 'N/A') %></td>
                                 <td data-label="Start"><%= event.starttime || 'N/A' %></td>
                                 <td data-label="City"><%= event.city || 'N/A' %></td>
                                 <td data-label="State"><%= event.state || 'N/A' %></td>
@@ -290,6 +290,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/backend/scripts.js"></script>
     <script>
         // Event Listener for Send Email Button
         document.getElementById('sendEmailButton').addEventListener('click', async () => {
