--- a/frontend/views/volunteerMain.ejs
+++ b/frontend/views/volunteerMain.ejs
@@ -141,5 +141,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="/backend/scripts.js"></script>
 </body>
 </html>
