--- a/frontend/views/volunteerRecords.ejs
+++ b/frontend/views/volunteerRecords.ejs
@@ -158,6 +158,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/backend/scripts.js"></script>
     <script>
     $(document).ready(function () {
         // Delegated event binding for both Edit and Save buttons
