--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -221,21 +221,7 @@ aria-hidden="true"
             
         </section>
         <!-- Footer-->
-        <footer class="footer py-4" style="background-color: #303030; position: absolute; bottom: 0; width: 100%; height: 30 px;">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start ms-3 text-white">
-                    Copyright &copy; Turtle Shelter Demo
-                </div>
-                <div class="col-lg-4 my-3 my-lg-0 d-flex justify-content-center">
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/turtleshelterproject/" target="blank" aria-label="Facebook">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/turtleshelterproject/" target="blank" aria-label="Instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                </div>
-            </div>
-        </footer>
+        <%- include('partials/footer_public') %>
         <!-- Core theme JS-->
         <script src="/backend/scripts.js"></script>
     <!-- AI chatbot -->
