--- a/frontend/views/partials/header_public.ejs
+++ b/frontend/views/partials/header_public.ejs
@@ -4,8 +4,8 @@
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top public-nav" id="mainNav" style="background-color: #759145;">
-	<div class="container-fluid p-0" style="background-color: #759145; margin-left: 10px; margin-right: 10px;">
-		<a class="navbar-brand" href="/" style="color: #f7f4de;">Turtle Shelter Project</a>
+	<div class="container-fluid p-0" style="background-color: #759145; margin-left: 15px; margin-right: 10px;">
+		<a class="navbar-brand" href="/" style="color: #f7f4de;">Turtle Shelter Project - Demo</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color: #f7f4de;">
 			Menu
 			<i class="fas fa-bars ms-1"></i>
