Removed Potential copy right issues

--- a/frontend/views/partials/header_admin.ejs
+++ b/frontend/views/partials/header_admin.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: #303030;">
 	<div class="container-fluid p-0">
-    <a class="navbar-brand" href="/internalLanding"><img src="/assets/TSlogoLowRes.png" alt="..." />Turtle Shelter Project -- Admin</a>
+    <a class="navbar-brand" href="/internalLanding">Charity App -- Admin</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 			<i class="fas fa-bars ms-1"></i>
