--- a/frontend/views/partials/header_public.ejs
+++ b/frontend/views/partials/header_public.ejs
@@ -6,8 +6,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top public-nav" id="mainNav" style="background-color: #759145;">
 	<div class="container-fluid px-2" style="background-color: #759145;">
 		<a class="navbar-brand" href="/" style="color: #f7f4de;">
-			<span class="d-none d-md-inline">Turtle Shelter Project - Demo</span>
-			<span class="d-inline d-md-none">TSP - Demo</span>
+			<span class="d-none d-md-inline">Turtle Shelter Charity Demo</span>
+			<span class="d-inline d-md-none">Charity App Demo</span>
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color: #f7f4de;">
 			Menu
