--- a/frontend/views/partials/header_volunteer.ejs
+++ b/frontend/views/partials/header_volunteer.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: #2d3748;">
 	<div class="container-fluid p-0">
-    <a class="navbar-brand" href="/volunteerPage"><img src="/assets/TSlogoLowRes.png" alt="..." />Turtle Shelter Project -- Volunteers</a>
+    <a class="navbar-brand" href="/volunteerPage">Turtle Shelter Charity Demo -- Volunteers</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 			<i class="fas fa-bars ms-1"></i>
