--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -32,7 +32,7 @@
         <header class="masthead" style="margin-top: 60px;">
             <div class="container" style="background-color: rgba(30, 30, 30, 0.5); box-shadow: none;">
                 <div class="masthead-subheading">Saving Lives</div>
-                <div style="margin-bottom: 30px;" class="masthead-heading text-uppercase">Start with You</div>
+                <div style="margin-bottom: 30px;" class="masthead-heading text-uppercase">Starts with You</div>
                 <div><a class="btn btn-primary btn-xl text-uppercase" style="color: #f7f4de;" href="/howToHelp">How can I Help?</a></div>
             </div>
             
