--- a/frontend/views/eventRequest.ejs
+++ b/frontend/views/eventRequest.ejs
@@ -16,7 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="page-top" class="page-event-request">
         <!-- Navigation-->
         <%- include('partials/header_public') %>
         <section>
