--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -29,7 +29,7 @@
         <!-- Navigation-->
         <%- include('partials/header_public') %>
         <!-- Masthead-->
-        <header class="masthead" style="margin-top: 60px;">
+        <header class="masthead">
             <div class="container" style="background-color: rgba(30, 30, 30, 0.5); box-shadow: none;">
                 <div class="masthead-subheading">Saving Lives</div>
                 <div style="margin-bottom: 30px;" class="masthead-heading text-uppercase">Starts with You</div>
@@ -118,7 +118,7 @@
         </div>
         
         <!-- What we do-->
-        <section style="padding-top: 15px; padding-bottom: 15px;" class="page-section" id="services">
+        <section style="padding-top: 15px; padding-bottom: 0px;" class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">"Every Life has Value, Every Person can Serve"</h2>
